--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,6 +136,7 @@ include_directories(
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/distance_based_localizer_node.cpp)
 add_executable(distance_based_localizer src/distance_based_localizer.cpp)
+add_executable(distance_based_localizer_ver2 src/distance_based_localizer_ver2.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -147,6 +148,7 @@ add_executable(distance_based_localizer src/distance_based_localizer.cpp)
 ## same as for the library above
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(distance_based_localizer ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(distance_based_localizer_ver2 ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node
@@ -154,6 +156,7 @@ add_dependencies(distance_based_localizer ${${PROJECT_NAME}_EXPORTED_TARGETS} ${
 # )
 
 target_link_libraries(distance_based_localizer ${catkin_LIBRARIES})
+target_link_libraries(distance_based_localizer_ver2 ${catkin_LIBRARIES})
 
 #############
 ## Install ##
