--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,10 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   std_msgs
   nav_msgs
+  geometry_msgs
+  tf
   object_detector_msgs
+
 )
 
 ## System dependencies are found with CMake's conventions
