--- a/package.xml
+++ b/package.xml
@@ -54,16 +54,19 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>object_detector_msgs</build_depend>
+  <build_depend>distance_based_localizer_msgs</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>nav_msgs</build_export_depend>
   <build_export_depend>object_detector_msgs</build_export_depend>
+  <build_export_depend>distance_based_localizer_msgs</build_export_depend>
 
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>object_detector_msgs</exec_depend>
+  <exec_depend>distance_based_localizer_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
