--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,7 +141,8 @@ include_directories(
 # add_executable(${PROJECT_NAME}_node src/distance_based_localizer_node.cpp)
 add_executable(distance_based_localizer src/distance_based_localizer.cpp)
 add_executable(distance_based_localizer_ver2 src/distance_based_localizer_ver2.cpp)
-# add_executable(distance_based_localizer_ver3 src/distance_based_localizer_ver3.cpp)
+add_executable(distance_based_localizer_ver3 src/distance_based_localizer_ver3.cpp)
+add_executable(distance_based_localizer_odom src/distance_based_localizer_odom.cpp)
 add_executable(evaluation src/evaluation.cpp)
 
 ## Rename C++ executable without prefix
@@ -155,7 +156,8 @@ add_executable(evaluation src/evaluation.cpp)
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(distance_based_localizer ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(distance_based_localizer_ver2 ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-# add_dependencies(distance_based_localizer_ver3 ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(distance_based_localizer_ver3 ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(distance_based_localizer_odom ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(evaluation ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
@@ -165,7 +167,8 @@ add_dependencies(evaluation ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTE
 
 target_link_libraries(distance_based_localizer ${catkin_LIBRARIES})
 target_link_libraries(distance_based_localizer_ver2 ${catkin_LIBRARIES})
-# target_link_libraries(distance_based_localizer_ver3 ${catkin_LIBRARIES})
+target_link_libraries(distance_based_localizer_ver3 ${catkin_LIBRARIES})
+target_link_libraries(distance_based_localizer_odom ${catkin_LIBRARIES})
 target_link_libraries(evaluation ${catkin_LIBRARIES})
 
 #############
