--- a/config/roomba2.yaml
+++ b/config/roomba2.yaml
@@ -27,3 +27,14 @@ move_noise: 0.2
 estimated_weight_th: 4.0
 roomba_odom: roomba2_odom
 is_only_odom: false
+behind_th: 0.2
+behind_roomba_th: 1.0
+front_roomba_th: 0.8
+odom_topic_name: "/roomba2/roomba/odometry"
+object_topic_name: "/roomba2/object_positions"
+pose_topic_name: "/roomba2/db_pose"
+poses_topic_name: "/roomba2/db_poses"
+score_topic_name: "/roomba2/score"
+path_topic_name: "/roomba2/path"
+front_topic_name: "/roomba1/score"
+behind_topic_name: "/roomba3/score"
