--- a/config/roomba1.yaml
+++ b/config/roomba1.yaml
@@ -35,4 +35,4 @@ pose_topic_name: "/roomba1/db_pose"
 poses_topic_name: "/roomba1/db_poses"
 score_topic_name: "/roomba1/score"
 path_topic_name: "/roomba1/path"
-behind_topic_name: "/roomba2/score"
+behind_topic_name: "/roomba2/fixed_score"
