--- a/config/roomba2.yaml
+++ b/config/roomba2.yaml
@@ -36,5 +36,5 @@ pose_topic_name: "/roomba2/db_pose"
 poses_topic_name: "/roomba2/db_poses"
 score_topic_name: "/roomba2/score"
 path_topic_name: "/roomba2/path"
-front_topic_name: "/roomba1/score"
-behind_topic_name: "/roomba3/score"
+front_topic_name: "/roomba1/fixed_score"
+behind_topic_name: "/roomba3/fixed_score"
