--- a/config/roomba3.yaml
+++ b/config/roomba3.yaml
@@ -36,5 +36,5 @@ pose_topic_name: "/roomba3/db_pose"
 poses_topic_name: "/roomba3/db_poses"
 score_topic_name: "/roomba3/score"
 path_topic_name: "/roomba3/path"
-front_topic_name: "/roomba2/score"
-behind_topic_name: "/roomba4/score"
+front_topic_name: "/roomba2/fixed_score"
+behind_topic_name: "/roomba4/fixed_score"
