--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,6 +148,7 @@ add_executable(distance_based_localizer_ver3_odom src/distance_based_localizer_v
 add_executable(distance_based_localizer_odom src/distance_based_localizer_odom.cpp)
 add_executable(evaluation src/evaluation.cpp)
 add_executable(vanish src/vanish.cpp)
+add_executable(listen6 src/listen6.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -166,6 +167,7 @@ add_dependencies(distance_based_localizer_ver3_odom ${${PROJECT_NAME}_EXPORTED_T
 add_dependencies(distance_based_localizer_odom ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(evaluation ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(vanish ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(listen6 ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node
@@ -180,6 +182,7 @@ target_link_libraries(distance_based_localizer_ver3_odom ${catkin_LIBRARIES})
 target_link_libraries(distance_based_localizer_odom ${catkin_LIBRARIES})
 target_link_libraries(evaluation ${catkin_LIBRARIES})
 target_link_libraries(vanish ${catkin_LIBRARIES})
+target_link_libraries(listen6 ${catkin_LIBRARIES})
 
 #############
 ## Install ##
