--- a/config/roomba4.yaml
+++ b/config/roomba4.yaml
@@ -36,5 +36,5 @@ pose_topic_name: "/roomba4/db_pose"
 poses_topic_name: "/roomba4/db_poses"
 score_topic_name: "/roomba4/score"
 path_topic_name: "/roomba4/path"
-front_topic_name: "/roomba3/score"
-behind_topic_name: "/roomba5/score"
+front_topic_name: "/roomba3/fixed_score"
+behind_topic_name: "/roomba5/fixed_score"
