--- a/config/roomba5.yaml
+++ b/config/roomba5.yaml
@@ -36,5 +36,5 @@ pose_topic_name: "/roomba5/db_pose"
 poses_topic_name: "/roomba5/db_poses"
 score_topic_name: "/roomba5/score"
 path_topic_name: "/roomba5/path"
-front_topic_name: "/roomba4/score"
-behind_topic_name: "/roomba6/score"
+front_topic_name: "/roomba4/fixed_score"
+behind_topic_name: "/roomba6/fixed_score"
