--- a/config/roomba6.yaml
+++ b/config/roomba6.yaml
@@ -36,4 +36,4 @@ pose_topic_name: "/roomba6/db_pose"
 poses_topic_name: "/roomba6/db_poses"
 score_topic_name: "/roomba6/score"
 path_topic_name: "/roomba6/path"
-front_topic_name: "/roomba5/score"
+front_topic_name: "/roomba5/fixed_score"
