--- a/config/roomba1_listen.yaml
+++ b/config/roomba1_listen.yaml
@@ -10,6 +10,8 @@ bench: 1.0
 fire: 1.0
 big: 1.5
 trash: 0.8
+robot: 1.5
+behind_roomba: 0.1
 odom: 20
 alpha_slow_th: 0.001
 alpha_fast_th: 0.1
@@ -35,4 +37,4 @@ pose_topic_name: "/roomba1/db_pose"
 poses_topic_name: "/roomba1/db_poses"
 score_topic_name: "/roomba1/score"
 path_topic_name: "/roomba1/path"
-behind_topic_name: "/roomba2/score"
+behind_topic_name: "/roomba2/fixed_score"
